2010-06-22  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Handle write returning 0 for LEOM.

2010-06-21  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am: list libamglue in _SOURCES variables, too,
	  so that dependencies are correct and parallel makes do not
	  fail

2010-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/IPC/LineProtocol.pm: Fix for multiline.

2010-06-17  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/Makefile.am changer-src/Makefile.am: remove READLINE_LIBS

2010-06-17  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: update tapedev and tpchanger docs
	  to match new changer API

2010-06-17  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/bsd-security.c common-src/bsdtcp-security.c
	  common-src/bsdudp-security.c common-src/local-security.c
	  common-src/security-util.c common-src/ssh-security.c: zero out new
	  structures, and protect logtime messages from NULL dereferences

2010-06-16  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: use chmod a-x instead of chmod -x

2010-06-16  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: remove comment from Makefile rule

2010-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.pl: Don't call check_data_path for a FILE-WRITE.

2010-06-16  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: add chmod -x for more recent Test::Harness
	  implementations that are confused by executable tests

2010-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm, perl/Amanda/Report/human.pm: 'FAIL planner'
	  line should result in FAILED dump (not MISSING dump).
	* installcheck/amreport.pl: Test it.

2010-06-14  Dustin J. Mitchell <dustin@zmanda.com>
	* config/automake/installperms.am: add new special cases

	* application-src/Makefile.am client-src/Makefile.am
	  oldrecover-src/Makefile.am recover-src/Makefile.am